fix text overflow.

--- a/assets/scss/pages/_order.scss
+++ b/assets/scss/pages/_order.scss
@@ -7,6 +7,7 @@
 			margin-top: 10px;
 		}
 	}
+	header > h1 { @include text-overflow(); }
 	.order-detail {
 		width: 100%;
 		padding: 10px 40px;
